# hlp-rs-rewrite

./: Cargo.toml  README.md
src/: applylayer.rs  cache.rs  dfs.rs  distance.rs  distcheck.rs  eqmask.rs  layer.rs  lut.rs  main.rs  pairs.rs  search.rs  tables.rs  unicount.rs  vec.rs
