[package]
name = "hlp-rs-rewrite"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
target-cpu = "native"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"