cargo-features = ["profile-rustflags"]

[package]
name = "hlp-rs-rewrite"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
target-cpu = "native"
rustflags = ["-C", "target-feature=+sse3,+sse4.1,+sse4.2", "--emit", "asm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
chrono = "0.4.31"